third try button Done

--- a/settings.html
+++ b/settings.html
@@ -116,7 +116,7 @@
   <div id="footer1">
     <div class="footer1">
       <button type="button" class="fbutton1">Reset to Defaults</button>
-        <button type="button" class="fbuttontwo1" onclick="location.href = '/multipage-application/';">Done</button> 
+        <button type="button" class="fbuttontwo1" onclick="location.href = '/multipage-application/index.html';">Done</button> 
     </div>
   </div>
 
