updated settings page and styles

--- a/settings.html
+++ b/settings.html
@@ -3,9 +3,9 @@
 
 <head>
 
- <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
- <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
- <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+  <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+  <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
 
   <link rel="stylesheet" style="text/css" href="style.css">
   <meta charset="utf-8">
@@ -14,11 +14,12 @@
 </head>
 
 <!-- HEADER -->
+
 <body id="bodysettings1">
   <div id="header1">
 
     <span class="align1"><img src="images/settingspage-headerbar.png" class="headerimg1"></span>
-    <div class="x1"><a href="index.html" class="xx1">x</a></div>
+    <div class="x1"><a href="#" class="xx1">x</a></div>
     <div class="header1">
       Settings
     </div>
@@ -107,16 +108,11 @@
     </div>
   </div>
 
-  <!-- SCROLL BAR -->
-  <div id="scroll1">
-    <span class="scroll1"><img src="images/settingspage-scrollbar.png" class="scrollimg1"></span>
-  </div>
-
   <!-- FOOTER -->
   <div id="footer1">
     <div class="footer1">
       <button type="button" class="fbutton1">Reset to Defaults</button>
-        <button type="button" class="fbuttontwo1" onclick="location.href = 'https://bensenica.github.io/multipage-application/index.html';">Done</button> 
+      <button type="button" class="fbuttontwo1" onclick="location.href = 'https://bensenica.github.io/multipage-application/index.html';">Done</button>
     </div>
   </div>
 
